<resources>
    <string name="config_password">set-up password</string>
    <string name="config_password_msg">set-up password</string>
    <string name="rooting_off_device">Not Rooting Device</string>
    <string name="rooting_on_device">Rooting Device</string>
    <string name="incoming_call_msg">contact please.</string>
    <string name="incoming_call">incoming call request</string>
    <string name="presence">UC</string>
    <string name="person_etc">... </string>
    <string name="back_press_msg">Pressing the back button will exit again.</string>
    <string name="invite">invite</string>
    <string name="pm">PM</string>
    <string name="am">AM</string>
    <string name="person">person</string>
    <string name="office">telephone</string>
    <string name="mobile">mobile</string>
    <string name="exists_room_msg">There has already been saved to your Chat Room</string>
    <string name="org_favorite_add">organization Favorite</string>
    <string name="provisioning">Login Success</string>
    <string name="contact_update_msg">contact update</string>
    <string name="tab_organization">organization</string>
    <string name="tab_dialer">keypad</string>
    <string name="tab_calllog">callLog</string>
    <string name="tab_notification">Notification</string>
    <string name="tab_contacts">Contacts</string>
    <string name="tab_message">Message</string>
    <string name="recent_call_delete">recent call delete</string>
    <string name="favorite_delete">favorite delete</string>
    <string name="contact_edit_title">edit</string>
    <string name="contact_save">contact</string>
    <string name="favorite_device_title">Device</string>
    <string name="input_contact_office">company name</string>
    <string name="input_contact_position">position</string>
    <string name="company_name">company</string>
    <string name="buddy_refresh">Buddy Refresh Complete</string>
    <string name="chat_adduser_select">add User</string>
    <string name="call_record">call record</string>
    <string name="more_calllog">more info</string>
    <string name="recent_call">recent call</string>
    <string name="input_success">save success</string>
    <string name="input_contact_name">input name</string>
    <string name="input_contact_email">input email</string>
    <string name="input_contact_number">input telephone number</string>
    <string name="input_contact_mobile">input mobile number</string>
    <string name="contact_info">input contact info</string>
    <string name="new_contact">add contact</string>
    <string name="view">view</string>
    <string name="favorite_alldel">remove All</string>
    <string name="selected_all">select all</string>
    <string name="network_option_disable">network disable</string>
    <string name="favorite_exist">There has already been saved to your favorites</string>
    <string name="favorite_add">add favorite</string>
    <string name="favorite_del">delete favorite</string>
    <string name="record_del">records delete</string>
    <string name="record_del_msg">All records will be deleted</string>
    <string name="del_favorite_title">favorite delete</string>
    <string name="del_favorite_all">All favorite will be deleted</string>
    <string name="call_in">incoming_call</string>
    <string name="call_out">outcoming_call</string>
    <string name="call_missed">missed_call</string>
    <string name="call_refusal">refusal_call</string>
    <string name="call_all">all</string>
    <string name="network_disable">network disable</string>
    <string name="completion">completion</string>
    <string name="save_photo">Please click on the Save button</string>
    <string name="contact_search_result">search result</string>
    <string name="chat_input_hint">input message</string>
    <string name="chat_adduser">add User</string>
    <string name="org_search">search</string>
    <string name="network_mode">network mode change</string>
    <string name="wifi_msg">3G/LTE connected option.</string>
    <string name="lte_msg">Wi-Fi connected option.</string>
    <string name="input_nickname">input nickname</string>
    <string name="network_title_msg">network connected</string>
    <string name="data_connect">3G/LTE connected</string>
    <string name="wifi_connect">Wi-Fi connected</string>
    <string name="helplink">Help</string>
    <string name="helplink_setting">Help Page</string>
    <string name="helpmsg"> </string>
    <string name="qnalink">QnA</string>
    <string name="qnalink_setting">QnA Page</string>
    <string name="qnamsg"> </string>
    <string name="network">Network</string>
    <string name="network_setting">Option</string>
    <string name="networkmsg">3G/LTE, Wi-Fi</string>
    <string name="keypad">keypad</string>
    <string name="phonebook">phonebook</string>
    <string name="bookmark">bookmark</string>
    <string name="calllog">calllog</string>
    <string name="schedule">schedule</string>
    <string name="nickname_length">/thirteen</string>
    <string name="photo_edit">photo edit</string>
    <string name="photo_title">select</string>
    <string name="photo_album">album</string>
    <string name="photo_camera">camera</string>
    <string name="toggle_off">OFF</string>
    <string name="toggle_on">ON</string>
    <string name="saehaInstallDialogTitle">notification</string>
    <string name="saehaInstallDialogMessage">Installation of MultiView mobile app is required.\nWhen you press the [Install] button, and then navigate to the installation screen.\nPlease re-run the Messenger after the installation is complete.</string>
    <string name="saehaInstallPositiveBtn">ok</string>
    <string name="untitled">untitled</string>
    <string name="ring_volume">ring volume</string>
    <string name="server_info">server Info</string>
    <string name="serverSettingMsg">server Info Change</string>
    <string name="serverSetting">server Info</string>
    <string name="note_send">send</string>
    <string name="send">send</string>
    <string name="notetitle">input title</string>
    <string name="note_counttitle">send Note (Receive : </string>
    <string name="notecontent">input content</string>
    <string name="note_filelist">Attached file list</string>
    <string name="note_userlist">Recipient list</string>
    <string name="favorite_del_msg">Delete Data Complete.</string>
    <string name="favorite_add_msg">Add Data Complete.</string>
    <string name="menu_user_add_msg">Add User Complete.</string>
    <string name="group_duplication">There are the same group name.</string>
    <string name="menu_group_add_msg">Please enter\nan additional group name.</string>
    <string name="menu_group_mod_msg">Please enter\nthe name of the group to be changed.</string>
	<string name="menu_group_add">Add top-level group</string>
	<string name="menu_group_mod">Group Name Change</string>
	<string name="menu_group_del">Delete Group</string>
	<string name="menu_group_del_msg">delete the group.</string>
	<string name="menu_sub_group_add">Add a group to lower</string>
	<string name="menu_user_add">Add User</string>
	<string name="menu_user_del">Delete User</string>
	<string name="menu_user_del_msg">remove a user from a group.</string>
	<string name="menu_move">Moving Groups and Users</string>
	<string name="mypart_delete">User is not possible to delete my part</string>
    <string name="background_save">background save</string>
    <string name="colorbackground">color background</string>
    <string name="albumbackground">album select</string>
    <string name="background">background</string>
    <string name="backgroundSettingMsg">room background settings</string>
    <string name="backgroundSetting">background Set-up</string>
    <string name="userchoice">Enter the user choice</string>
    <string name="loginid">ID Login</string>
    <string name="loginname">Name Login</string>
    <string name="downloadSave">"Save to download folder"</string>
    <string name="logout">You have been signed out\nin connection with the same ID from elsewhere.</string>
    <string name="gsInMessage">" entered the room"</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="noDesc">No description</string>
    <string name="buddy">My list</string>
    <string name="organization">Organization</string>
    <string name="search">Search</string>
    <string name="search_type_all">All</string>
    <string name="search_type_name">name</string>
    <string name="search_type_part">division</string>
    <string name="search_type_id">id</string>
    <string name="search_type_position">position</string>
    <string name="search_type_phone">telephone</string>
    <string name="search_type_mobile">mobile</string>
    <string name="search_type_job">job</string>
    <string name="mobileOff">   (Disable mobile)</string>
    <string name="mobileOn">   (Use mobile)</string>
    <string name="sendFile">Send file</string>
    <string name="roomEnter">Enter</string>
    <string name="calling">Call</string>
    <string name="info">See information</string>
    <string name="outMessage"> was sent off.</string>
    <string name="mark"> ※</string>
    <string name="optionSettingMsg">Vibration, Beeps, Alert settings</string>
    <string name="optionSetting">Set-up</string>
    <string name="chatSoundSelect">Select ringtone</string>
    <string name="noticeSoundSelect">Select ringtone</string>
    <string name="noChatUser">The Chat is not possible users</string>
    <string name="receiveDate">[Received Time] </string>
    <string name="sendPerson">[Sender] </string>
    <string name="fileReceive">[Receive file]</string>
    <string name="fileReceiveMsg">File has arrived</string>
    <string name="note">Notification</string>
    <string name="notice">Notifiation</string>
    <string name="message">Message</string>
    <string name="count"></string>
    <string name="result">Results:</string>
    <string name="noSearchData">Results:0</string>
    <string name="noResultsFound">No Results Found</string>
    <string name="inputSearchValue">Please input a keyword</string>
    <string name="groupchat">Group chat:\t</string>
    <string name="people">\tpersons</string>
    <string name="createDate">Creation date</string>
    <string name="mgroupware">Groupware</string>
    <string name="msaehaviewer">Multiview</string>
    <string name="mnstalk">NStalk</string>
    <string name="patchTitle">Messenger update</string>
    <string name="patchMessage">Update to the latest version of Messenger</string>
    <string name="groupChatRoomTitle">User list of group chat room</string>
    <string name="chatOptionTitle">Options</string>
    <string name="chatOptionAlbum">See album</string>
    <string name="chatOptionMail">Send an email conversation</string>
    <string name="chatOptionText">Attached to AtTalkChats.txt file</string>
    <string name="lastversion">The latest version</string>
    <string name="imageloading">Loading Image</string>
    <string name="moffice">mNeoNet</string>
    <string name="config">setup</string>
    <string name="account">account</string>
    <string name="accountInfo">현재 로그인 된 계정</string>
    <string name="file">fileopen</string>
    <string name="idTitle">ID</string>
    <string name="passwordTitle">Password</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="_1day">1 day</string>
    <string name="_7day">1 week</string>
    <string name="_30day">1 month</string>
    <string name="_90day">3 month</string>
    <string name="_180day">6 month</string>
    <string name="_365day">1 year</string>
    <string name="_0day">do not delete</string>
    <string name="edit">Edit</string>
    <string name="userslist">Users list</string>
    <string name="delRoom">Delete chatting room</string>
    <string name="autoDelTitle">Auto deleted</string>
    <string name="option">Settings</string>
</resources>