<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center|top"
    android:background="#FFFFFF"
    android:gravity="center|top"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:background="#FFFFFF"
        android:gravity="center|top"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="top"
            android:background="#8d9dd8"
            android:gravity="center"
            android:text="@string/option"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/chat_search"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/border_gray"
            android:onClick="ONCLICK_DIALOG"
            android:text="@string/search" />

        <Button
            android:id="@+id/chat_mail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/border_gray"
            android:onClick="ONCLICK_DIALOG"
            android:text="@string/chatOptionMail" />

        <Button
            android:id="@+id/chat_album"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/border_gray"
            android:onClick="ONCLICK_DIALOG"
            android:text="@string/chatOptionAlbum" />

        <Button
            android:id="@+id/chat_userlist"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/border_gray"
            android:onClick="ONCLICK_DIALOG"
            android:text="@string/userslist" />

        <Button
            android:id="@+id/chat_adduser"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/border_gray"
            android:onClick="ONCLICK_DIALOG"
            android:text="@string/chat_adduser" />

        <Button
            android:id="@+id/chat_delroom"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/border_gray"
            android:onClick="ONCLICK_DIALOG"
            android:text="@string/delRoom" />
    </LinearLayout>

</LinearLayout>