<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#E6E6FA"
    android:gravity="left"
    android:orientation="vertical" >

<LinearLayout
    android:layout_width="324.6dp"
    android:layout_height="wrap_content"
    android:background="#003E7C"
    android:gravity="center"
    android:orientation="vertical" >
    
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="2.33dp"
        android:background="#ffffff"
        android:gravity="center"
        android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50.6dp"
       	android:background="@drawable/pattern_bar_bg"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/configauto_title"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/autoDelTitle"
            android:textColor="#ffffff"
            android:textSize="19dp" />

    </LinearLayout>

	    <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="0.67dp"
	            android:orientation="vertical"
	            android:background="#d6d6d6" >
	        </LinearLayout>
        
		<RadioGroup
		    android:id="@+id/deleteInterval"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical" >
		    
		    <RadioButton
		        android:id="@+id/_0day"
		        android:layout_width="match_parent"
		        android:layout_height="61dp"
		        android:layout_marginLeft="20dp"
		        android:button="@drawable/button_radio"
		        android:paddingLeft="17.6dp"
		        android:text="@string/_0day"
		        android:textColor="#666666">
		    </RadioButton>

		    <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="0.67dp"
	            android:orientation="vertical"
	            android:background="#d6d6d6" >
	        </LinearLayout>
	        
		    <RadioButton
		        android:id="@+id/_1day"
		        android:layout_width="match_parent"
		        android:layout_height="61dp"
		        android:layout_marginLeft="20dp"
		        android:button="@drawable/button_radio"
		        android:paddingLeft="17.6dp"
		        android:text="@string/_1day"
		        android:textColor="#666666" >
		    </RadioButton>

		    <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="0.67dp"
	            android:orientation="vertical"
	            android:background="#d6d6d6" >
	        </LinearLayout>
        
		    <RadioButton
		        android:id="@+id/_7day"
		        android:layout_width="match_parent"
		        android:layout_height="61dp"
		        android:layout_marginLeft="20dp"
		        android:button="@drawable/button_radio"
		        android:paddingLeft="17.6dp"
		        android:text="@string/_7day"
		        android:textColor="#666666" >
		    </RadioButton>

		    <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="0.67dp"
	            android:orientation="vertical"
	            android:background="#d6d6d6" >
	        </LinearLayout>
        
		    <RadioButton
		        android:id="@+id/_30day"
		        android:layout_width="match_parent"
		        android:layout_height="61dp"
		        android:layout_marginLeft="20dp"
		        android:button="@drawable/button_radio"
		        android:paddingLeft="17.6dp"
		        android:text="@string/_30day"
		        android:textColor="#666666" >
		    </RadioButton>

		    <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="0.67dp"
	            android:orientation="vertical"
	            android:background="#d6d6d6" >
	        </LinearLayout>
        
		    <RadioButton
		        android:id="@+id/_90day"
		        android:layout_width="match_parent"
		        android:layout_height="61dp"
		        android:layout_marginLeft="20dp"
		        android:button="@drawable/button_radio"
		        android:paddingLeft="17.6dp"
		        android:text="@string/_90day"
		        android:textColor="#666666" >
		    </RadioButton>

		    <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="0.67dp"
	            android:orientation="vertical"
	            android:background="#d6d6d6" >
	        </LinearLayout>
        
		    <RadioButton
		        android:id="@+id/_180day"
		        android:layout_width="match_parent"
		        android:layout_height="61dp"
		        android:layout_marginLeft="20dp"
		        android:button="@drawable/button_radio"
		        android:paddingLeft="17.6dp"
		        android:text="@string/_180day"
		        android:textColor="#666666" >
		    </RadioButton>

		    <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="0.67dp"
	            android:orientation="vertical"
	            android:background="#d6d6d6" >
	        </LinearLayout>
        
		    <RadioButton
		        android:id="@+id/_365day"
		        android:layout_width="match_parent"
		        android:layout_height="61dp"
		        android:layout_marginLeft="20dp"
		        android:button="@drawable/button_radio"
		        android:paddingLeft="17.6dp"
		        android:text="@string/_365day"
		        android:textColor="#666666" >
		    </RadioButton>
	   </RadioGroup>
				   
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#C6C6C6" >

        <Button
            android:id="@+id/configauto_cancel"
            android:layout_width="154dp"
   		    android:layout_height="42.6dp"
   		    android:layout_marginBottom="4dp"
   		    android:layout_marginLeft="4dp"
   		    android:layout_marginRight="2dp"
   		    android:layout_marginTop="4dp"
   		    android:background="#ffffff"
   		    android:text="@string/cancel"
   		    android:textColor="#7f7f7f"
   		    android:textSize="15.6dp" />

        <Button
            android:id="@+id/configauto_ok"
            android:layout_width="154dp"
		    android:layout_height="42.6dp"
		    android:layout_marginBottom="4dp"
		    android:layout_marginLeft="2dp"
		    android:layout_marginRight="4dp"
		    android:layout_marginTop="4dp"
		    android:background="#ffffff"
		    android:text="@string/save"
		    android:textColor="#7f7f7f"
   		    android:textSize="15.6dp"  >
        </Button>

    </LinearLayout>
</LinearLayout>
</LinearLayout>
</ScrollView>