<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    
    <Button
        android:id="@+id/searchTypeAllRecord"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="#8d9dd8"
        android:gravity="center_vertical|center"
        android:text="@string/call_all"
        android:textColor="#393939"
        android:textSize="13dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="vertical"
        android:background="#DCDCDC" >
    </LinearLayout>
    
    <Button
        android:id="@+id/searchTypeReceiveRecord"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="#ffffff"
        android:gravity="center_vertical|center"
        android:text="@string/call_in"
        android:textColor="#393939"
        android:textSize="13dp"
        android:textStyle="bold" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="vertical"
        android:background="#DCDCDC" >
    </LinearLayout>
    
    <Button
        android:id="@+id/searchTypeSendRecord"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="#ffffff"
        android:gravity="center_vertical|center"
        android:text="@string/call_out"
        android:textColor="#393939"
        android:textSize="13dp"
        android:textStyle="bold" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="vertical"
        android:background="#DCDCDC" >
    </LinearLayout>
    
    <Button
        android:id="@+id/searchTypeMissedRecord"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="#ffffff"
        android:gravity="center_vertical|center"
        android:text="@string/call_missed"
        android:textColor="#393939"
        android:textSize="13dp"
        android:textStyle="bold" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="vertical"
        android:background="#DCDCDC" >
    </LinearLayout>
    
    <Button
        android:id="@+id/searchTypeRefusalRecord"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="#ffffff"
        android:gravity="center_vertical|center"
        android:text="@string/call_refusal"
        android:textColor="#393939"
        android:textSize="13dp"
        android:textStyle="bold" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="vertical"
        android:background="#DCDCDC" >
    </LinearLayout>
    
</LinearLayout>