<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    android:descendantFocusability="blocksDescendants" >

    <LinearLayout
        android:id="@+id/call_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/calllog_tab_normal"
            android:layout_width="match_parent"
            android:layout_height="39.3dp"
            android:background="#f1f1f1"
            android:orientation="horizontal"
            android:visibility="visible" >

            <LinearLayout
                android:id="@+id/favorite_tab_normal"
                android:layout_width="3.33dp"
                android:layout_height="match_parent"
                android:background="#74afea"
                android:orientation="vertical"
                android:visibility="gone" >
            </LinearLayout>

            <Button
                android:id="@+id/calllog_searchTypes"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="13dp"
                android:background="@drawable/btn_calllog_type"
                android:contentDescription="@string/noDesc"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:gravity="left|center_vertical"
                android:scaleType="fitXY"
                android:text="@string/call_all"
                android:textColor="#333333"
                android:textSize="16.6dp" />

            <Button
                android:id="@+id/calllog_option"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="13dp"
                android:background="@drawable/favorite_option" />

        </RelativeLayout>

        <!--  -->
        <RelativeLayout
            android:id="@+id/calllog_tab_selected"
            android:layout_width="match_parent"
            android:layout_height="39.3dp"
            android:background="@drawable/pattern_bar"
            android:visibility="gone" >
	
	        <Button
	            android:id="@+id/calllog_remove"
	            android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="13dp"
                android:background="@drawable/favorite_cancel"
                android:text="@string/delete"
                android:textSize="13.3dp"
                android:textColor="#ffffff" />
	
	        <Button
	            android:id="@+id/calllog_cancel"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentLeft="true"
	            android:layout_centerVertical="true"
	            android:layout_marginLeft="13dp"
	            android:background="@drawable/favorite_cancel"
	            android:text="@string/cancel"
	            android:textSize="13.3dp"
	            android:textColor="#ffffff" />
	
	        <TextView
	            android:id="@+id/calllog_title"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentTop="false"
	            android:layout_centerHorizontal="true"
	            android:layout_centerVertical="true"
	            android:text="@string/recent_call_delete"
	            android:textAppearance="?android:attr/textAppearanceLarge"
	            android:textColor="#ffffff"
	            android:textSize="16.6dp" />

	    </RelativeLayout>
	    <!--  -->
        
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0.67dp"
        android:layout_below="@id/call_layout"
        android:background="#d6d6d6"
        android:orientation="vertical" >

    </LinearLayout>
    

    <ListView
        android:id="@+id/calllog_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/call_layout"
        android:dividerHeight="0px"
 		android:divider="#ffffff"  >

    </ListView>
    
    
    <LinearLayout
        android:id="@+id/calllog_option_dialog"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/call_layout"
        android:layout_margin="5dp"
        android:background="#f1f1f1"
        android:orientation="vertical"
        android:visibility="gone" >

        <Button
            android:id="@+id/calllog_checkremove"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:background="@drawable/border_gray"
            android:text="@string/edit"
            android:textColor="#333333"
            android:textSize="16.6dp" />

        <Button
            android:id="@+id/calllog_delete"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:background="@drawable/border_gray"
            android:text="@string/favorite_alldel"
            android:textColor="#333333"
            android:textSize="16.6dp" />
    </LinearLayout>

</RelativeLayout>